# hutt

./: CLAUDE.md  Cargo.toml  Makefile  README.md  SUGGESTIONS.md  config.sample.toml
docs/: GMAIL.md
docs/plans/: 2026-02-23-hutt-server-design.md  2026-02-23-hutt-server-plan.md  2026-02-23-split-inbox-design.md  2026-02-23-split-inbox-plan.md  2026-02-23-tab-bar-design.md  2026-02-24-bidirectional-ipc-cli-output-hutt-server-plan.md  2026-02-24-cli-output-design.md  2026-02-24-clickable-links-attachments-design.md  2026-02-24-clickable-links-attachments-plan.md  multi-account.md
linux/: hutt-opener.desktop
macos/: hutt-opener.applescript
macos/hutt-opener/Contents/: Info.plist
macos/hutt-opener/Contents/MacOS/: hutt-open.sh
nvim/lua/hutt/: complete.lua  compose.lua  init.lua  send.lua
scripts/: superhuman-import.py
src/: compose.rs  config.rs  envelope.rs  keymap.rs  links.rs  maildir.rs  main.rs  mime_render.rs  mu_client.rs  mu_sexp.rs  send.rs  smart_folders.rs  splits.rs  undo.rs
src/tui/: command_palette.rs  envelope_list.rs  folder_picker.rs  help_overlay.rs  mod.rs  preview.rs  status_bar.rs  thread_view.rs
tests/: container-url-test.py  test-url-handler.sh
windows/: hutt-open.ps1  hutt-opener.reg
