[package]
name = "hutt"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A fast, keyboard-driven TUI email client"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.28", features = ["event-stream"] }
html2text = "0.16"
lexpr = "0.2"
mail-parser = "0.9"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
toml = "0.8"
unicode-width = "0.2"
